# flecs-particle-instantiating

./: CMakeLists.txt  README.md
resources/: lighting.frag  lighting_instancing.vert
src/: CMakeLists.txt  components.h  main.cpp  systems.cpp  systems.h
